--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@keyframes blink {
+    0%,
+    25%,
+    to {
+        opacity: 1;
+    }
+    50%,
+    75% {
+        opacity: 0;
+    }
+}
+
+.blink {
+    animation: blink 3s infinite step-start;
+}
